# vbcontrol

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_dc.py  test_pmsm.py
include/: DCMotorDynamics.hpp  DLQR.hpp  ExtendedKalmanFilter.hpp  FullStateController.hpp  GyrobroDynamics.hpp  LinearKalmanFilter.hpp  PID.hpp  PMSMCascadeFOC.hpp  PMSMDynamics.hpp  SysModel.hpp  UnscentedKalmanFilter.hpp  ss.hpp  vbmath.hpp
src/: DCMotorDynamics.cpp  DLQR.cpp  ExtendedKalmanFilter.cpp  FullStateController.cpp  GyrobroDynamics.cpp  LinearKalmanFilter.cpp  PID.cpp  PMSMCascadeFOC.cpp  PMSMDynamics.cpp  UnscentedKalmanFilter.cpp  main.cpp  pybingings.cpp  ss.cpp
